perf(v3): SSC3-J1c — the long bank; arith-loop allocates 10.5x less
specs/ssc3-jit.md §9. `arith-loop` makes ONE call, so its frame is allocated
once, and it still reclaimed ~4 087 MB of young generation: every megabyte was a
Value.VInt or VBool boxing an arithmetic result. A frame now carries an
Array[Long] beside its Array[Value], and a register lives in it when every writer
stores a proved integer.

  arith-loop   ~4 087 MB  ->  ~391 MB     10.5x less allocated
  nested-loop                  ~391 MB
  answers unchanged: VInt(499999500000), VInt(249500250000)

That is a load-independent number, which is the only kind this host gives
(specs/ssc3-jit.md §8). A wall-clock A/B follows separately.

THE INVARIANT, and everything rests on it: only Const, Move and Bin may write a
long-bank register, and Exec.stepBanked answers all three itself. Everything else
reaches the shared interpreter, which knows nothing about banks -- so before
delegating, syncFor writes back exactly the registers that instruction READS, and
nothing has to be read back afterwards.

A SECOND DISPATCH LOOP rather than a flag in the first: J0c got `step` to 236
bytes and inlined into `exec`, and bank checks would have grown it past
FreqInlineSize and taken that back. That is the J2 lesson -- an earlier win
constrains the next change -- applied before it could bite instead of after. A
function with no long-bank register runs the original loop untouched.

THREE DEFECTS OF MY OWN ON THE WAY, and two of the three were found by a check
rather than by me:

* THE GATE CAUGHT A WRONG ANSWER. `wrong-kind.ssir` -- two STRINGS added under a
  lying `i64` annotation, the fixture built yesterday to assert the fallback --
  printed `0` instead of `ab`. Trusting `kind` alone made the destination
  long-bank; the fallback correctly produced VStr("ab") into the Value slot, the
  long slot stayed unwritten, and the next sync overwrote the string with
  VInt(0). Fixed by requiring BOTH OPERANDS to be long-bank themselv